[gd_scene load_steps=4 format=2]

[ext_resource path="res://Projectiles/Plasmaball.gd" type="Script" id=1]
[ext_resource path="res://GFX/Projectiles/plasmagun_shoot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0312

[node name="Plasmaball" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SelfDestructionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Plasmaball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SelfDestructionTimer" to="." method="_on_SelfDestructionTimer_timeout"]
